Fix game bug & tweak UI layout Layout has been altered for a better user experience. The game's code had a few bugs that are now corrected. Score is now visibile.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 
 .content {
     max-width: 80%;
-    margin: auto;
+    margin: 20px auto;
     text-align: center;
     /* border: 3px solid black; */
     background-color: #DADED4;
@@ -23,7 +23,8 @@ h1 {
     color: #3C403D;
 }
 
-h2 {
+h2.content__instructions__header {
+    margin: 1.5rem 0 0 0;
     font-size: 2rem;
     color: #3C403D;
 }
@@ -32,10 +33,6 @@ h2 {
     max-width: 80ch;
     margin: 0.5rem auto;
     color: #3C403D;
-}
-
-.content__instructions__header {
-    /* margin:20rem 0px 0px 0px; */
 }
 
 .content__button {
@@ -79,7 +76,7 @@ h2 {
 
 .content__round__result {
     
-    width: 1000px;
+    max-width: 1000px;
     /* background-color: grey; */
     margin: 100px auto;
     text-align: center;
